<resources>
    <string name="app_name">travel_project</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="interests_title"> What would you like to do on your trip? </string>
    <string name="food">Try new cuisines</string>
    <string name="landmark">Visit landmarks</string>
    <string name="info">INFO</string>
    <string name="startDate">Start Date: 03/25/2022</string>
    <string name="endDate">End Date: 04/02/2022</string>
    <string name="numDays">Number of days: 8 days</string>
    <string name="budget">Budget: $9000</string>
    <string name="results">Results</string>
    <string name="map">Map</string>
    <string name="back">Back</string>
    <string name="sign_up">Sign Up</string>
    <string name="country">Pick a Country</string>
    <string name="state">Pick a State</string>
    <string name="city">Pick a City</string>
</resources>