<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="166dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="135dp"
        android:layout_marginBottom="571dp"
        android:text="@string/info"
        android:textColor="#000000"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startDate"
        android:textSize="19sp"
        android:layout_alignTop="@id/textView"
        android:layout_marginTop="70dp"
        android:layout_marginStart="70dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endDate"
        android:textSize="19sp"
        android:layout_alignTop="@id/textView2"
        android:layout_marginTop="100dp"
        android:layout_marginStart="70dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numDays"
        android:textSize="19sp"
        android:layout_alignTop="@id/textView3"
        android:layout_marginTop="100dp"
        android:layout_marginStart="70dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/budget"
        android:textSize="19sp"
        android:layout_alignTop="@id/textView4"
        android:layout_marginTop="100dp"
        android:layout_marginStart="70dp" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:layout_alignTop="@id/textView5"
        android:layout_marginTop="140dp"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>